Closed Bug 900419 Opened 12 years ago Closed 12 years ago

Media Recording - MediaRecorder's state is wrong when stopping media stream during recording

Categories

(Core :: Audio/Video: Recording, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla26

People

(Reporter: rlin, Assigned: rlin)

References

Details

Attachments

(1 file, 1 obsolete file)

Found the recorder's state still recording when the media stream becomes stopped during recording.
Assignee: nobody → rlin
Attached patch patch v1 (obsolete) — Splinter Review
Attachment #784332 - Flags: review?(roc)
Attached patch patch v1Splinter Review
This is the correct one...
Attachment #784332 - Attachment is obsolete: true
Attachment #784332 - Flags: review?(roc)
Attachment #784333 - Flags: review?(roc)
Are you making sure to fire onstop as well if the media stream stops during recording? We probably need a mochitest for this as well.
If the media stream enter stop status, the UA should got onstop event.
I will let this test for this behavior on this bug 897776. check-in first.
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Keywords: verifyme
QA Contact: jsmith
Verified on trunk on 8/12.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Component: Video/Audio → Video/Audio: Recording
No longer blocks: MediaRecording
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: