Bug 900419 - Media Recording - MediaRecorder's state is wrong when stopping media stream during recording. r=roc